# gstreamer

./: README.md  install.sh  pyproject.toml  test
gstreamer_tutorials/: concepts  concepts.c  dynamic_pipelines  dynamic_pipelines.c  hello_world  hello_world.c
src/gstreamer_tutorials/: __init__.py
src/gstreamer_tutorials/basics/: five.py  four.py  one.py  three.py  two.py
