[project]
name = "gstreamer_tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JagpreetJakhar", email = "jagpreetjakhar94@gmail.com" }
]
requires-python = ">=3.12.3"
dependencies = [
"pycairo>=1.27.0",
"pygobject>=3.52.3"]

[project.scripts]
basics1 = "gstreamer_tutorials.basics.one:main"
basics2 = "gstreamer_tutorials.basics.two:main"
basics3 = "gstreamer_tutorials.basics.three:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
